Set more media queries to resolve unexpected overflow on PC monitors (built on tv)

--- a/Assets/indexstyle3.css
+++ b/Assets/indexstyle3.css
@@ -41,36 +41,92 @@ iframe {
     
 }
 .morph {
-    height: 55vh;
+    height: 30vw;
 }
 .card-body {
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+.card {
+    min-width: 225px;
+    min-height: 350px;
 }
 .about {
     text-align: justify;
 }
 .head {
     opacity: .5;
+    min-height: unset;
 }
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1700px) {
     .thumbs {
         height: 100px;
         width: 100px;
-        border-radius: 0px;
     }
-    .about {
-        height: 200px;
-        overflow-x: scroll;
-        text-align: center; 
-        
+}
+
+@media screen and (max-width: 1400px) {
+    .thumbs {
+        height: 75px;
+        width: 75px;
+    }
+    .icon {
+        height: 30px;
+        width: 30px;
+        border: none;
+        border-radius: 0px;
     }
     iframe {
         height: 150%;
         width: 200%;
         transform: scale(0.50);
         transform-origin: 0 0;
+    }
+    #description, .description {
+        font-size: .7em;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .thumbs {
+        height: 50px;
+        width: 50px;
+        border-radius: 10px;
+    }
+    .icon {
+        height: 20px;
+        width: 20px;
+        border: none;
+        border-radius: 0px;
+    }
+    iframe {
+        height: 100%;
+        width: 200%;
+        transform: scale(0.50);
+        transform-origin: 0 0;
+    }
+    #description, .description {
+        font-size: .4em;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .thumbs {
+        height: 50px;
+        width: 50px;
+        border-radius: 10px;
+    }
+    .about {
+        height: 200px;
+        overflow-x: scroll;
+        text-align: center;   
+    }
+    .card {
+        min-height: unset;
+    }
+    iframe {
+       display: none;
     }
     br {
         display: none;
